--- a/css/style.css
+++ b/css/style.css
@@ -8,13 +8,12 @@
   border: none;
 }
 
-textarea:focus,
 input:focus {
   outline: none;
 }
 
 body {
-  background: linear-gradient(-135deg, #c850c0, #4158d0);
+  background: linear-gradient(to right, #c850c0, #4158d0);
 }
 
 a,
