--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ input:focus {
 }
 
 body {
-  background: linear-gradient(-135deg, #c850c0, #4158d0);
+  background: linear-gradient(to right, #c850c0, #4158d0);
 }
 
 a,
